PR 55058: force the boot partition to sd0d, so our root partitions becomes sd0a again.